[gd_scene load_steps=3 format=3 uid="uid://bcqnfty32hbhs"]

[ext_resource type="Script" uid="uid://88076inel6h0" path="res://Scenes/UI/game_settings.gd" id="1_bvgfa"]
[ext_resource type="Resource" uid="uid://cseery0f2nmrd" path="res://resources/game_state/base_settings.tres" id="2_yvkbb"]

[node name="GameSettings" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvgfa")
base_settings = ExtResource("2_yvkbb")

[node name="MasetVolume" type="Label" parent="."]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeInput" type="HSlider" parent="."]
layout_mode = 2
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Confirm" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Confirm"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="MasterVolumeInput" to="." method="_on_master_volume_input_value_changed"]
[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
